--- a/todo/templates/signup.html
+++ b/todo/templates/signup.html
@@ -28,9 +28,8 @@
                 </div>
             </form>
             <div class="field">
-                <b>Already have an account?</b>
                 <br>
-                <a href="/login.html"></a>
+                <a href="/login">Already have an account?</a>
             </div>
         </div>
     </div>
